Fixed html encoding bug with umlauts and special characters

--- a/ExtendedWPFToolkitSolution/Src/Xceed.Wpf.Toolkit/Xceed.Wpf.Toolkit.csproj
+++ b/ExtendedWPFToolkitSolution/Src/Xceed.Wpf.Toolkit/Xceed.Wpf.Toolkit.csproj
@@ -395,6 +395,7 @@
     <Compile Include="Core\Converters\ColorModeToTabItemSelectedConverter.cs" />
     <Compile Include="Core\Html\CssStylesheet.cs" />
     <Compile Include="Core\Html\HtmlCSSParser.cs" />
+    <Compile Include="Core\Html\HtmlEncodedTextWriter.cs" />
     <Compile Include="Core\Html\HtmlFromXamlConverter.cs" />
     <Compile Include="Core\Html\HtmlLexicalAnalyzer.cs" />
     <Compile Include="Core\Html\HtmlParser.cs" />
