Update wpftoolkit.yml for Azure Pipelines

--- a/wpftoolkit.yml
+++ b/wpftoolkit.yml
@@ -5,7 +5,7 @@
 # https://docs.microsoft.com/azure/devops/pipelines/apps/windows/dot-net
 
 trigger:
-- master
+- apd-master
 
 pool:
   vmImage: 'windows-latest'
