Update wpftoolkit.yml for Azure Pipelines

--- a/wpftoolkit.yml
+++ b/wpftoolkit.yml
@@ -33,7 +33,7 @@ steps:
   inputs:
     command: 'pack'
     packagesToPack: 'ExtendedWPFToolkitSolution/*.nuspec'
-    versioningScheme: 'off'
+    versioningScheme: 'byBuildNumber'
     
 - task: PublishBuildArtifacts@1
   inputs:
